--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
     <script type="text/javascript" src='./js/block.js'></script>
 
     <!-- reCaptcha -->
-    <script src="https://www.google.com/recaptcha/ api.js?onload=onloadCallback&render=explicit"
+    <script src="https://www.google.com/recaptcha/api.js?onload=captchaOnLoadCallback&render=explicit"
         async defer>
-    </script>
+
 
 
 
